<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:focusable="false"
    tools:context=".StartActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#333"
            android:orientation="vertical"
            android:paddingBottom="5dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/clip2gether_trans"
                    android:layout_marginLeft="10dip" />

                <TextView
                    android:id="@+id/loginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:singleLine="true"
                    android:text="@string/registerAcitvity_registerHeaderText"
                    android:textColor="#fff"
                    android:textSize="26dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip"
            android:weightSum="1">


            <EditText
                android:id="@+id/reg_fullname"
                style="@style/EditTextclip2gether"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:drawableLeft="@drawable/ic_image_timer_auto"
                android:hint="@string/registerActivity_username"
                android:singleLine="true"
                android:textColor="#222"

                android:textCursorDrawable="@drawable/cursorstyle"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/reg_email"
                style="@style/EditTextclip2gether"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:drawableLeft="@drawable/ic_communication_email"
                android:hint="@string/registerActivity_email"
                android:singleLine="true"

                android:textColor="#222"
                android:textCursorDrawable="@drawable/cursorstyle"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/reg_password"
                style="@style/EditTextclip2gether"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:drawableLeft="@drawable/ic_communication_vpn_key"
                android:hint="@string/registerActivity_password"
                android:password="true"
                android:singleLine="true"
                android:textColor="#222"
                android:textCursorDrawable="@drawable/cursorstyle"
                android:textSize="18dp" />
            <!-- Register Button -->
            <Button
                android:id="@+id/btnActivityRegister_Clip2Gether"
                style="@style/Buttonclip2gether"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:drawablePadding="-25dp"

                android:background="@drawable/button_standard_bg"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:text="@string/registerActivity_signInClip2gether"
                android:textColor="#fff"
                android:layout_margin="3dp" />


            <!-- Link to Registration Screen -->
            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnGplus"
                    style="@style/LoginButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layers_gplus_button_bg"
                    android:onClick="true"
                    android:paddingBottom="10dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/registerActivity_signInGooglePlus"
                    android:visibility="invisible">

                </Button>

                <Button
                    android:id="@+id/btnFB"
                    style="@style/LoginButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layers_fb_button_bg"
                    android:onClick="true"
                    android:paddingBottom="10dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/registerActivity_signInFacebook"
                    android:visibility="invisible">

                </Button>
            </LinearLayout>


            <!-- Link to Login Screen -->
            <TextView
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout02"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/registerActivity_linkLogin"
                android:textColor="@drawable/layers_links_color"
                android:textSize="22dip"
                android:textStyle="bold" />

        </LinearLayout>
        <!-- Registration Form Ends -->


    </RelativeLayout>
</ScrollView>
