<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".StartActivity"
    android:background="#ffffffff"
    android:focusable="false">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_clip2gether_logo"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnShareThisApp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView">

        <Button
            android:id="@+id/btnSelectLoginMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/startActivity_take2fie"
            android:paddingLeft="10dp"
            android:drawablePadding="-25dp"
            android:onClick="onClickHandler"
            android:background="@drawable/button_standard_bg"
            style="@style/Buttonclip2gether"
            android:drawableLeft="@android:drawable/ic_menu_camera"

            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnViewGalerie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingLeft="10dp"
            android:drawablePadding="-25dp"
            android:textColor="#fff"
            android:text="@string/startActivity_viewGallery"
            android:onClick="onClickHandler"
            android:background="@drawable/button_galerie_bg"
            style="@style/Buttonclip2gether"
            android:drawableLeft="@android:drawable/ic_menu_gallery"


            />






    </LinearLayout>



    <TextView  android:id="@+id/btnShareThisApp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/startActivity_shareAppLink"
        android:gravity="center"
        android:textSize="22dip"
        android:textColor="@drawable/layers_share_color"
        android:paddingTop="5dp"
        android:textStyle="normal|bold"
        android:paddingLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickHandler"


        android:paddingBottom="10dp" />




</RelativeLayout>